display on mobile screens fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,28 +4,35 @@ html,
 body,
 #root,
 .app {
-    height: 95%;
     width: 100%;
     font-family: 'Rubik', sans-serif;
 }
 
+body{
+    height: 100vh;
+}
+
 .container {
-    margin-top: 70px;
+    /* margin-top: 70px; */
+    padding-top: 70px;
     display: grid;
     grid-template-columns: auto auto auto;
     justify-items: center;
     justify-content: space-between;
-    height: 900px;
+    height: 100vh;
+    width: 100%;
 }
 
 .containerMobile {
-    margin-top: 70px;
+    /* margin-top: 70px; */
+    padding-top: 70px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     align-content: center;
-    height: 100%;
+    height: 100vh;
+    width: 100%;
 }
 
 .leftBar {
@@ -40,14 +47,36 @@ body,
 }
 
 .feed {
-    max-width: 700px;
+    width: 700px;
+    /* min-width: 100%; */
     padding: 1%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: flex-start;
-    align-items: center;
+    align-items: stretch;
     align-content: center;
+}
+
+@media screen and (max-width: 800px) {
+    .feed {
+        width: 100vw;
+        /* min-width: 100%; */
+        padding: 1%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        align-items: stretch;
+        align-content: center;
+    }
+}
+
+@media screen and (max-width: 1500px) {
+    .leftBarItem, .leftBar{
+        margin: 0px;
+        padding: 0px;
+    }
 }
 
 .rightBar {
@@ -222,7 +251,9 @@ body,
 .chatItemContainer {
     margin-left: 20px;
     margin-right: 20px;
-    margin-top: 2rem;
+    /* margin-top: 2rem; */
+    /* margin-top: 70px; */
+    /* padding-top: 70px; */
     letter-spacing: 0.5px;
     min-height: 100%;
     display: flex;
